<?xml version="1.0" encoding="UTF-8"?>
<!-- Trigger CI build: streaming v1.1.1 -->
<!-- Dummy commit to trigger centralized workflows: v1.0.2 -->
<!-- Triggering workflows v3 - Simplified Docker builds -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.am</groupId>
    <artifactId>am-core-services</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>AM Core Services</name>
    <description>Core Services Architecture for AM Investment Platform</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Spring Boot -->
        <spring-boot.version>3.2.3</spring-boot.version>
        <spring-cloud.version>2023.0.0</spring-cloud.version>

        <!-- Observability -->
        <micrometer-tracing.version>1.2.4</micrometer-tracing.version>
        <opentelemetry.version>1.34.1</opentelemetry.version>
        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
        
        <!-- Spring -->
        <spring-kafka.version>3.1.2</spring-kafka.version>
        <spring-data-mongodb.version>4.2.2</spring-data-mongodb.version>
        
        <!-- Kafka -->
        <kafka.version>3.6.1</kafka.version>
        
        <!-- Utilities -->
        <lombok.version>1.18.30</lombok.version>
        <jackson.version>2.19.2</jackson.version>
        <validation-api.version>3.0.2</validation-api.version>
        
        <!-- Testing -->
        <junit.version>5.10.1</junit.version>
    </properties>

    <modules>
        <!-- Libraries Layer -->
        <module>libraries/am-common-lib</module>
        <module>libraries/am-api-core-lib</module>
        <module>libraries/am-observability-lib</module>
        <module>libraries/am-kafka-lib</module>
        <module>libraries/am-analysis-adapter</module>
        <module>libraries/am-security-lib</module>
        <module>libraries/am-cache-lib</module>
        <module>libraries/am-feign-lib</module>
        <module>libraries/am-market-client-lib</module>
        <module>libraries/am-trade-client-lib</module>
        <module>libraries/am-portfolio-client-lib</module>
        <module>libraries/am-analysis-client-lib</module>
        
        <!-- Domain Layer -->
        <module>domain/am-market-domain</module>
        <module>domain/am-portfolio-domain</module>
        <module>domain/am-trade-domain</module>
        
        <!-- Services Layer -->
        <module>services/am-gateway</module>
        <module>services/am-analysis</module>
        <module>services/am-mcp-server</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Micrometer Tracing BOM -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-tracing-bom</artifactId>
                <version>${micrometer-tracing.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- OpenTelemetry BOM -->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal Modules -->
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-common-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-api-core-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-observability-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-kafka-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-analysis-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.domain</groupId>
                <artifactId>am-market-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.domain</groupId>
                <artifactId>am-portfolio-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-cache-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-feign-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.am.libraries</groupId>
                <artifactId>am-market-client-lib</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- Validation -->
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>

            <!-- Kafka -->
            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafka.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>github-investment</id>
            <name>GitHub Packages - Core Services</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-core-services</url>
        </repository>
        <repository>
            <id>github-trade</id>
            <name>GitHub Packages - Trade Services</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-trade-services</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-core-services</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
